Fix animation flicker.

--- a/app/components-react/sidebar/NavTools.m.less
+++ b/app/components-react/sidebar/NavTools.m.less
@@ -58,6 +58,12 @@
       display: flex;
       overflow: visible;
     }
+
+    :global(div.ant-menu.ant-menu-sub.ant-menu-inline),
+    :global(span.ant-menu-title-content) {
+      visibility: hidden;
+      opacity: 0;
+    }
   }
 
   &.open {
@@ -68,6 +74,14 @@
       overflow-wrap: break-word !important;
       padding-bottom: 0px;
       white-space: normal !important;
+    }
+
+    :global(div.ant-menu.ant-menu-sub.ant-menu-inline),
+    :global(span.ant-menu-title-content) {
+      visibility: visible;
+      overflow: visible;
+      opacity: 1;
+      transition: visibility 0s, opacity 0.5s linear;
     }
   }
 }
